--- a/box.html
+++ b/box.html
@@ -10,8 +10,9 @@
     <section class="container">
         <h1>Better offer</h1>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est debitis delectus quas nesciunt unde a hic eaque tempore! Adipisci odit unde quasi exercitationem ad nobis delectus mollitia, a saepe velit?</p>
-        <button>Get Started</button>
+        <button>Buy now</button>
     </section>
+    <div class="square"></div>
     
 </body>
 </html>
