--- a/fimg.html
+++ b/fimg.html
@@ -9,10 +9,11 @@
 <body>
     <div class="cont" align="center">
         <img src="img/suske.jfif" alt="suske" height="200px" width="300px">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam blanditiis cum minima et facere incidunt officia architecto, porro illo repellendus voluptas tenetur veritatis consequatur perspiciatis commodi tempora impedit. Sed, dolorem.
+        <p>Lorem ipsum dolor amet, consectetur adipisicing elit. Magnam blanditiis cum minima et facere incidunt officia architecto, porro illo repellendus voluptas tenetur veritatis consequatur perspiciatis commodi tempora impedit. Sed, dolorem.
         </p>
         <button>Save</button>
     </div>
+    
     
 </body>
 </html>
