--- a/totalhtml.html
+++ b/totalhtml.html
@@ -78,7 +78,7 @@
     <form action="form3.html">
         <fieldset>
             <legend align="center">Feedback</legend>
-            <label for="name">Name</label>
+            <label for="name" id="name">Name</label>
             <input type="text" name="" id="" required>
             <br><br>
             <label for="Email">Email</label>
