--- a/internal.html
+++ b/internal.html
@@ -16,6 +16,10 @@
             background-color: yellow;
             color: blueviolet;
         }
+        .h2{
+            background-color:white;
+            color: orangered;
+        }
 
     </style>
 
@@ -23,6 +27,6 @@
 <body>
     <h1>Heading 1</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, minus! Iste eveniet odit quos necessitatibus quia, dignissimos beatae laborum quaerat fugit eius optio! Facere a accusamus, repudiandae aperiam voluptatum porro.</p>
-    
+    <h2 class="h2">Hello</h2>
 </body>
 </html>
