--- a/totalhtml.html
+++ b/totalhtml.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1 align="center">Welcome</h1>
-    <marquee behavior="alternate" direction="right" bgcolor="yellow">This is web page</marquee>
+    <marquee behavior="" direction="right" bgcolor="yellow">This is web page</marquee>
     <hr size="2px" color="blue">
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente inventore sunt, eum saepe quod tempora, odit modi quos culpa sequi harum est cum amet laboriosam blanditiis perferendis non explicabo nihil.</p>
     <hr size="20px" color="red">
@@ -78,8 +78,8 @@
     <form action="form3.html">
         <fieldset>
             <legend align="center">Feedback</legend>
-            <label for="name" id="name">Name</label>
-            <input type="text" name="" id="" required>
+            <label for="Name" >Name</label>
+            <input type="text" name="" id="Name" required>
             <br><br>
             <label for="Email">Email</label>
             <input type="email" placeholder="Enter your email">
